fix scrollbar layout shifts

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,12 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
+html {
+  overflow: hidden;
+}
+
 body {
   width: 100%;
   height: 100vh;
-  /* position: relative; */
-  scrollbar-gutter: stable;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 /* Custom class using @apply for common styles */
